# wvlan-client

./: .gitignore  PRD_WireGuard_LAN.md  README.md  WVLAN_ARCHITECTURE_v1.0.md
.github/workflows/: ci-build.yml
control-server/: .env.example  .gitignore  COMPLETION_REPORT.md  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  STARTUP_GUIDE.md  docker-compose.yml  go.mod  go.sum
control-server/cmd/server/: main.go
control-server/docs/api/: API_DOCUMENTATION.md  swagger.go
control-server/internal/api/: router.go
control-server/internal/api/handlers/: config.go  connection.go  device.go  user.go
control-server/internal/api/middleware/: auth.go  common.go
control-server/internal/config/: config.go  config_test.go
control-server/internal/database/: database.go
control-server/internal/grpc/: server.go
control-server/internal/grpc/services/: device.go
control-server/internal/models/: models.go
control-server/internal/redis/: redis.go
control-server/migrations/: 001_create_users.sql  002_create_devices.sql  003_create_configs.sql  004_create_connection_logs.sql  005_create_indexes.sql  migrate.yml
control-server/pkg/auth/: jwt.go  jwt_test.go
control-server/pkg/logger/: logger.go
control-server/proto/: services.proto
control-server/tests/: handlers_test.go
installer/: build-installer.ps1
installer/innosetup/: setup.iss
installer/nsis/: build.nsi
scripts/: monitor-build.sh  monitor_github_actions.py
wvlan-client/: CMakeLists.txt  README.md  dependencies.md
wvlan-client/docs/: DEPENDENCIES.md  USAGE.md
wvlan-client/scripts/: build.md  build.ps1
wvlan-client/src/Bridge/CSharpCLI/: ConfigBridge.h  NativeBridge.cpp  NativeBridge.h  RouteBridge.h  WireGuardBridge.cpp  WireGuardBridge.h
wvlan-client/src/Core/Config/: ConfigManager.cpp  ConfigManager.h  ConfigParser.cpp  ConfigParser.h
wvlan-client/src/Core/Routing/: RouteConfigurator.cpp  RouteConfigurator.h  RouteTableManager.cpp  RouteTableManager.h
wvlan-client/src/Core/WireGuard/: WireGuardDevice.cpp  WireGuardDevice.h  WireGuardManager.cpp  WireGuardManager.h
wvlan-client/src/Utils/: Logger.cpp  Logger.h  NetworkUtils.cpp  NetworkUtils.h  SecurityUtils.cpp  SecurityUtils.h
wvlan-client/src/WpfClient/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WpfClient.csproj
wvlan-client/src/WpfClient/Bridge/: BridgeWrapper.cs
wvlan-client/src/WpfClient/Models/: Configuration.cs  LogEntry.cs  NodeStatus.cs  OperationResult.cs
wvlan-client/src/WpfClient/Services/: ConfigService.cs  LoggerService.cs  WireGuardService.cs
wvlan-client/src/WpfClient/ViewModels/: ConfigViewModel.cs  LogViewModel.cs  MainWindowViewModel.cs  NodeViewModel.cs
wvlan-client/src/WpfClient/Views/: DashboardView.xaml  DashboardView.xaml.cs  LogsView.xaml  LogsView.xaml.cs  NodesView.xaml  NodesView.xaml.cs  ProfilesView.xaml  ProfilesView.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs
wvlan-client/tests/: main.cpp
wvlan-client/tests/Bridge/: README.md
wvlan-client/tests/Core/: ConfigParserTest.cpp  RouteTableManagerTest.cpp  WireGuardDeviceTest.cpp  WireGuardManagerTest.cpp
wvlan-client/tests/Utils/: SecurityUtilsTest.cpp
